theme/manimejia/foundation-manimejia-fourcolor.scss
/* ... */
.focusable:focus{
}

.font-xsmaller,
.font-xsmaller p{
	font-size: .6rem !important;
	font-weight:bold;
}
.font-smaller,
.font-smaller p{
	font-size: .9rem !important;
	//font-weight:bold;
}
.font-large,
.font-large p{
	font-size: 1.2rem !important;
}
.font-larger,
.font-larger p{
	font-size: 1.5rem !important;
}
.font-xlarger,
.font-xlarger p{
	font-size: 2rem !important;
}
.font-xxlarger,
.font-xxlarger p{
	font-size: 3rem !important;
}
.font-bold{
	font-weight: bold;
}
.font-italic{
	font-style: italic;
}

.text-shadow{
	text-shadow: #222 0px 0px .1em;
}
.text-shadow-deep{
	text-shadow: #000 0px 0px .3em;
}
.icon{
  font-size: 5rem;
  line-height: 1.2em;
}
img.icon{
  height: 5rem;
  width:5rem;
  border-radius: 50%;
}
img.icon.icon-large{
  height: 8rem;
  width:8rem;
}

.tagcloud {
@for $t from 1 through 50 {
	$tagsize: floor($t / 3) + .5rem;
	.tag-count-#{$t}{
		font-size: $tagsize;
	}
}
}



a.close{
	display: inline-block;
	line-height: 1em;
	padding: .3rem;
	margin-top: 1rem;
	font-size: 3em;
}
.highlight{
  color: $alert-color;
  text-shadow: #222 0px 0px .1em;
}

.inline{
	display:inline;
}

.inline-block{
	display:inline-block;
}
.rotate--90{
  -webkit-transform: rotate(-90deg);
  -moz-transform:    rotate(-90deg);
  -ms-transform:     rotate(-90deg);
  -o-transform:      rotate(-90deg);
  transform:         rotate(-90deg);
}
a.grippy{
width: 3rem;
display: inline-block;
border-bottom: .25rem get-color(secondary) double;
border-top: .25rem get-color(secondary) double;
/*cursor: row-resize;*/
margin-bottom: .5rem;
height: .5rem;
}

.full-height{
	height:100%;
}

.row.table-row{
	margin-top:1em;
	border-top:1px #666 solid;
	}

.clearing-thumbs img{
	width:150px;
}

.relative{
  position: relative;
}


.fixed-bottom{
  width: 100%;
  left: 0;
  position: fixed;
  bottom: 0;
  z-index: 1010;
}

.fixed-inside-parent{
  position: absolute;
  z-index: 1010;
	top: 0;
  left:0;
  width:100%;
}
.fixed-inside-parent.fixed{
  position: fixed;
	top: 50px;
}

.top-bar-section.inline ul li{
 float:none;
 display:inline-block;
}
.reveal-modal.full{
	position:fixed;
	max-width: 100% !important;
	top:0 !important;
}
.close-reveal-modal{
	text-decoration: none;
	border:none;
}
body.f-topbar-fixed .clearing-blackout {
padding-top: 45px;
}

/** section overlays **/
section > h2:first-child{
 margin-top: 2rem;
}


/* colored backgrounds and overlays*/
@each $colorKey in map-keys($colors) {
	.bg-#{$colorKey}{
		color: $white;
	  background-color: get-color($colorKey,darker);
	  &.overlay{
	  	background-color: rgba(get-color($colorKey,darker), .9);
	  }
		p{
	  	text-shadow: 0 0 2px get-color($colorKey,darkest), 0 0 5px get-color($colorKey,darkest);
      // background-color: rgba(get-color($colorKey,darkest), .9);
	  	// box-shadow: inset 0 0 .5em .5em rgba(get-color($colorKey,darker), .9);
	  	// -moz-box-shadow: inset 0 0 .5em .5em rgba(get-color($colorKey,darker), .9);
	  	// -webkit-box-shadow: inset 0 0 .5em .5em rgba(get-color($colorKey,darker), .9);
		}
	}
	.border-#{$colorKey}{
	  border-color: get-color($colorKey,darker);
	}
}

.fullheight{
	height:100%;
}
.text-left{
	text-align: left;
}
.text-center{
	text-align: center;
}
.text-right{
	text-align: right;
}
.center{
	display:block;
	text-align: center;
}
.vertical-top{
  position: relative;
  top: 0;
  transform: translateY(-50%);
}
.vertical-middle{
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}
.vertical-bottom{
  position: relative;
  bottom: 0;
  transform: translateY(-50%);
}
/*
section.overlay.alert{
  background-color: rgba(get-color(alert,darker), 0.8);
	p{
  	text-shadow: 0 0 2px get-color(alert,darkest), 0 0 5px get-color(alert,darkest);
	}
}
section.overlay.warning{
  background-color: rgba(get-color(warning,darker), 0.8);
	p{
  	text-shadow: 0 0 2px get-color(warning,darkest), 0 0 5px get-color(warning,darkest);
	}
}
section.overlay.info{
  background-color: rgba(get-color(info,darker), 0.8);
	p{
  	text-shadow: 0 0 2px get-color(info,darkest), 0 0 5px get-color(info,darkest);
  }
}
section.overlay.success{
  background-color: rgba(get-color(success,darker), 0.8);
	p{
  	text-shadow: 0 0 2px get-color(success,darkest), 0 0 5px get-color(success,darkest);
  }
}*/

/*.alert-box.warning,
.alert-box.secondary{
	color:get-color(primary,darkest);
}*/

.label.point-right::after {
content: ' ';
pointer-events: none;
position: absolute;
height: 0px;
width: 0px;
bottom: 0px;
right: -1.5rem;
border-width: 0.8rem;
border-style: solid;
border-color: rgba(0, 0, 0, 0);
border-left-color: inherit;
}

/* 
 * Apply default header styles to <header> elements 
 */
header {
  font-family: $header-font-family;
  font-weight: $header-font-weight;
  font-style: $header-font-style;
  color: $header-font-color;
  text-rendering: $header-text-rendering;
  line-height: $header-line-height;

  small {
    font-size: $small-font-size;
    color: $small-font-color;
    line-height: 0;
  }
}

footer{
  background-color: $body-bg;
}


// custom list styles
ul.column{
	margin:0;
}
ul.icon-list > li{
  list-style-type: none;
  margin-left: 2em;
}
ul.icon-list > li:before{
  float:left;
  font-size:2em;
  padding-right:.5em;
  height:100%;
  margin-left:-1em;
}

ul.icon-list {
	@each $colorKey in map-keys($colors) {
	  &.#{$colorKey} > li:before { 
		  color: get-color($colorKey,base);
		}
	}
}


li > p + ul {
margin-top: -1em;
margin-bottom: 1em;
}
/* ... */

